.provarCaches/00D5f000005vwGkEAI/objects/rstkf__statementmaint__c.object
<CustomObject>
    <description>statementmaint__c</description>
    <fields>
        <fullName>rstkf__exportreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__filterfromglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter From Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ Statement Maint (Filter from year)</relationshipLabel>
        <relationshipName>filterfromglyearstatementmaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__filterfromperiod__c</fullName>
        <label>Filter From Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__filterreportstatus__c</fullName>
        <label>Filter on Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>To be Discarded</fullName>
                </value>
                <value>
                    <fullName>To be Preserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__filterreporttype__c</fullName>
        <label>Filter on Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Schedule</fullName>
                </value>
                <value>
                    <fullName>P &amp; L</fullName>
                </value>
                <value>
                    <fullName>P &amp; L Schedule</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Statement</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Stmt Schedule</fullName>
                </value>
                <value>
                    <fullName>Extended Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Extended Trial Balance, Omit Zero-Value Lines</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__filterthruglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Through Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ Statement Maint (Filter through year)</relationshipLabel>
        <relationshipName>filterthruglyearstatementmaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__filterthruperiod__c</fullName>
        <label>Filter through period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__fromglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purge From Report Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ Statement Maint</relationshipLabel>
        <relationshipName>fromyearstatementmaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__fromperiod__c</fullName>
        <label>Purge From Report Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>ZZ Statement Maint</relationshipLabel>
        <relationshipName>statementmaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Report Data - Top Level</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipLabel>ZZ Statement Maint</relationshipLabel>
        <relationshipName>statementmaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__key__c</fullName>
        <label>Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__maintain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain Report Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__newreportstatus__c</fullName>
        <label>New Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>To be Discarded</fullName>
                </value>
                <value>
                    <fullName>To be Preserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__orientation__c</fullName>
        <inlineHelpText>Specifies if the reports orientation will be Portrait or Landscape</inlineHelpText>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__output__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Output Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__pagesize__c</fullName>
        <label>Page Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A4 (8.27 × 11.69)</fullName>
                </value>
                <value>
                    <fullName>Letter (8.5 x 11)</fullName>
                    <default>true</default>
                    <label>Letter (8.5 x 11)</label>
                </value>
                <value>
                    <fullName>Legal (8.5 x 14)</fullName>
                </value>
                <value>
                    <fullName>Ledger (11 x 17)</fullName>
                </value>
                <value>
                    <fullName>Tabloid (17 x 11)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__printreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__purge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purge Reports to be Discarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__suppresszerovaluelines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Zero Value Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__thruglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purge Through Report Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ Statement Maint (Purge through report year)</relationshipLabel>
        <relationshipName>thruyearstatementmaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__thruperiod__c</fullName>
        <label>Purge Through Report Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__viewreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Report</label>
        <type>Checkbox</type>
    </fields>
    <label>ZZ Statement Maint</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZZ Statement Maint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>